kubernetes/apps/matrix/livekit/app/route.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app ${APP}
spec:
  hostnames: ["livekit.${SECRET_DOMAIN}"]
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: *app
          port: 80
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: &app ${APP}
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: turn
  rules:
    - backendRefs:
        - name: livekit-turn
          port: 443
